--- a/mypy.ini
+++ b/mypy.ini
@@ -4,7 +4,7 @@ plugins =
     mypy_drf_plugin.main
 
 mypy_path = src
-show_error_codes = True
+show_error_codes = false
 
 [mypy.plugins.django-stubs]
 django_settings_module = "config.settings"
